--- a/index.html
+++ b/index.html
@@ -1759,6 +1759,60 @@
             </div>
         </div>
     </section>
+        <!-- FOOTER / CREATED BY -->
+<footer>
+  <style>
+    footer {
+      background: linear-gradient(135deg, #4f46e5, #6366f1);
+      color: #ffffff;
+      padding: 24px 12px;
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+    }
+
+    .footer-bottom {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      gap: 8px;
+      font-size: 0.9rem;
+    }
+
+    .footer-bottom p {
+      margin: 0;
+      opacity: 0.95;
+    }
+
+    .footer-bottom strong {
+      font-weight: 600;
+    }
+
+    .footer-bottom a {
+      color: #fde68a;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .footer-bottom a:hover {
+      text-decoration: underline;
+    }
+
+    .created-by {
+      font-size: 0.85rem;
+      opacity: 0.9;
+    }
+  </style>
+
+  <div class="footer-bottom">
+    <p>
+      &copy; 2025 <strong>Sistem Komputer</strong>. All rights reserved.
+    </p>
+    <p class="created-by">
+      Created with by 
+      <a href="https://yourwebsite.com" target="_blank">Amrin Amrillah</a>
+    </p>
+  </div>
+</footer>
 
     <!-- Modal -->
     <div class="modal" id="modal">
